--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
     
 <main class="form-signin w-100 m-auto">
   <form action="/" method="post">
-    <img class="mb-4" src="images/tesla.png" alt="" width="72" height="57">
+    <img class="mb-4" src="images/newsletter.png" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Signup to my Newsletter</h1>
 
     <div class="form-floating">
